LIME-922 Add more specific loggign around invalid dates (e.g value 0) and filter out values of 0 prior to calculation in calculateOldestDateInMonths